examples/smlfmt-1.2.0/test/fail/mixfix-1/infix.sml
infix 2 <
infix 3 --
infixr 2 >
fun (x: 'a) < (y: 'a) = x
fun (x: 'a) > (y: 'a) = y
fun x -- y = x
